# dsastress

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: rust.yml
examples/: brute.py  fast.py  gen.py
examples/pair_sum/: README.md  brute.cpp  brute.rs  fast.cpp  fast.rs  gen.py
examples/stable_groups/: brute.py  fast.py  gen.py
src/: exec.rs  lib.rs  main.rs  minimize.rs  runner.rs
